Update to Detail Page Template

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <div class="col-sm-4">
             <div class="card">
               <div class="card-body">
-                <img src = "images/shoe1.webp" width="100%" height = "auto" class = "center">
+                <img src = "images/Air Force 1.webp" width="100%" height = "auto" class = "center">
                 <h5 class="card-title">Nike Air Force 1</h5>
                 <p class="'card-text">Estimate Price: $100</p>
                 <p class="card-text">The radiance lives on in the Nike Air Force 1, 
