--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <ul>
-          <h1>E-Commerce</h1>  
+          <a href="index.html"><h1>E-Commerce</h1></a>
           <li><a href="about.html">About</a></li>
           <li><a href="index.html">Products</a></li>
         </ul>
