--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!--template-->
     <div class = "column">
-    <a href = "Details_Air Jordans 5.html" id = "converse" class="productCard">
+    <a href = "" id = "converse" class="productCard">
         <img src="images/Air Jordan 5.jpg" alt="Air Jordans 5" style="width:100%">
         <div class="productBoxContainer">
           <div class = "productBoxText"> 
@@ -58,14 +58,14 @@
   <!--template-->
 
   <div class = "column">
-    <a href = "" id = "converse" class="productCard">
-        <img src="images/Air Jordan 5.jpg" alt="Air Jordans 5" style="width:100%">
+    <a href = "Air Force 1.html" id = "converse" class="productCard">
+        <img src="images/Air Force 1.webp" alt="Air Force 1" style="width:100%">
         <div class="productBoxContainer">
           <div class = "productBoxText"> 
             <div class = "productBoxCategory">Converse</div>
-            <h4><b>Air Jordans 5</b></h4> 
+            <h4><b>Air Force 1</b></h4> 
             <h5 style = "color: rgb(128, 128, 128);">Nike</h5> 
-            <h4><b>$210.00</b></h4>  
+            <h4><b>$100.00</b></h4>  
         </div>
 
         <div id = "rating">
@@ -73,9 +73,9 @@
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
-          <span class="fa fa-star"></span>
+          <span class="fa fa-star checked"></span>
 
-          <div id = "rating-review">30 reviews</div>
+          <div id = "rating-review">21 reviews</div>
  
         </div>
       </div>
