Detail Page Css

--- a/Shoes/Air Force 1.html
+++ b/Shoes/Air Force 1.html
@@ -16,30 +16,30 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Air Force 1</p>
 
-            <div class = "category">Category: White</div>
-        </div>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/shoe1.webp" >
+        </div> 
 
-        <div id="main">
+        <div class="main">
+            <div class="title" >
+                <p >Air Force 1</p>
+                <div class = "category">Category: White | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <div id = "rating-review">73462 reviews</div>
+                  </div>
+            </div>
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/shoe1.webp"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$100</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">The radiance lives on in the Nike Air Force 1,
-                        the b-ball OG that puts a fresh spin on what you know best: durably stitched overlays,
-                        clean finishes and the perfect amount of flash to make you shine.</p>
-                </div>
+            <p id = "price">$100.00</p>     
+            <p id = "description">The radiance lives on in the Nike Air Force 1,
+                    the b-ball OG that puts a fresh spin on what you know best: durably stitched overlays,
+                    clean finishes and the perfect amount of flash to make you shine.</p>
             </div>
         </div>
     </div>
