--- a/Shoes/Nike Air Huarache.html
+++ b/Shoes/Nike Air Huarache.html
@@ -16,34 +16,32 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Nike Air Huarache</p>
 
-            <div class = "category">Category: Other</div>
-        </div>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/huarache.jpg"  >
+        </div> 
 
-        <div id="main">
+        <div class="main">
+            <div class="title" >
+                <p >Nike Air Huarache</p>
+                <div class = "category">Category: Other | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <div id = "rating-review">52552 reviews</div>
+                  </div>
+            </div>
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/huarache.jpg"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$210</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">Release your discontent, let your worries fall away and get moving in the Nike Air Huarache. Built to fit your foot and designed for comfort, 
-                    these kicks put a fresh spin on a street-level favorite. 
-                    Breathable, neoprene-like fabric, stripped-away branding and an unmistakable heel clip keep the early ‘90s look you love, 
-                    while subtle yin-yang symbols on the insole and side encourage you to seek balance and harmony in your day.</p>
-                </div>
+            <p id = "price">$210.00</p>     
+            <p id = "description">Release your discontent, let your worries fall away and get moving in the Nike Air Huarache. Built to fit your foot and designed for comfort, these kicks put a fresh spin on a street-level favorite. Breathable, neoprene-like fabric, stripped-away branding and an unmistakable heel clip keep the early ‘90s look you love, while subtle yin-yang symbols on the insole and side encourage you to seek balance and harmony in your day.</p>
             </div>
         </div>
     </div>
+
 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
