--- a/Shoes/Nike Air VaporMax 2021 FK.html
+++ b/Shoes/Nike Air VaporMax 2021 FK.html
@@ -16,34 +16,33 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Nike Air VaporMax 2021 FK</p>
 
-            <div class = "category">Category: Other</div>
-        </div>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/vapormax.jpg"  >
+        </div> 
 
-        <div id="main">
+        <div class="main">
+            <div class="title" >
+                <p >Nike Air VaporMax 2021 FK</p>
+                <div class = "category">Category: Other | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <div id = "rating-review">23467 reviews</div>
+                  </div>
+            </div>
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/vapormax.jpg"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$210</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">Spring is in the Air—and also in your step! The VaporMax Air unit uses the pressure from your stride to create a springy bounce with every move. 
-                    The Flyknit upper is breathable and structured to help keep your feet cool and secure.
-                    High elastic and wide rubber band, will not strangle the instep, and will not fail to follow the foot.
-                    The flyknit fabric effectively wraps the foot surface and is breathable.</p>
-                </div>
+            <p id = "price">$210.00</p>   
+            <p id = "description">Spring is in the Air—and also in your step! The VaporMax Air unit uses the pressure from your stride to create a springy bounce with every move. The Flyknit upper is breathable and structured to help keep your feet cool and secure. High elastic and wide rubber band, will not strangle the instep, and will not fail to follow the foot. The flyknit fabric effectively wraps the foot surface and is breathable.</p>
             </div>
         </div>
     </div>
+
+   
 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
