--- a/Shoes/Nike Air VaporMax Plus.html
+++ b/Shoes/Nike Air VaporMax Plus.html
@@ -16,34 +16,31 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Nike Air VaporMax Plus</p>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/vapormax plus.jpg"  >
+        </div> 
 
-            <div class = "category">Category: Black</div>
-        </div>
+        <div class="main">
+            <div class="title" >
+                <p >Nike Air VaporMax Plus</p>
+                <div class = "category">Category: Black | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star  "></span>
+                    <div id = "rating-review">10700 reviews</div>
+                  </div>
+            </div>
 
-        <div id="main">
-
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/vapormax plus.jpg"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$210</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">The Nike Air VaporMax Plus looks to the past and propels you into the future. Nodding to the 1998 Air Max Plus with its floating cage, padded upper and heel logo, 
-                    it adds revolutionary VaporMax Air technology to ramp up the comfort and create a modern look.
-                    Nike nike air vapormax plus "Triple Black" pure black color matching, the body of nike air plus is grafted on the VaporMax air cushion outsole.
-                    The highly recognizable classic frame lines, combined with new atmospheric points, collide with a wild feeling.</p>
-                </div>
+            <p id = "price">$210.00</p>     
+            <p id = "description">The Nike Air VaporMax Plus looks to the past and propels you into the future. Nodding to the 1998 Air Max Plus with its floating cage, padded upper and heel logo, it adds revolutionary VaporMax Air technology to ramp up the comfort and create a modern look. Nike nike air vapormax plus "Triple Black" pure black color matching, the body of nike air plus is grafted on the VaporMax air cushion outsole. The highly recognizable classic frame lines, combined with new atmospheric points, collide with a wild feeling.</p>
             </div>
         </div>
-    </div>
+
+     
 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
