--- a/Shoes/Nike Air Vapormax 2021.html
+++ b/Shoes/Nike Air Vapormax 2021.html
@@ -16,35 +16,37 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Nike Air Vapormax 2021</p>
 
-            <div class = "category">Category: Other</div>
-        </div>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/shoe3.webp"  >
+        </div> 
 
-        <div id="main">
+        <div class="main">
+            <div class="title" >
+                <p >Nike Air Vapormax 2021</p>
+                <div class = "category">Category: Other | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star  "></span>
+                    <div id = "rating-review">26171 reviews</div>
+                  </div>
+            </div>
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/shoe3.webp"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$210</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">Made from at least 40% recycled materials by weight, 
-                    the Nike Air VaporMax 2021 FK is airy and easy to wear with superstretchy, 
-                    recycled Flyknit fabric (plus a soft collar that sculpts your ankle). 
-                    The stitched-on Swoosh and recycled TPU heel clip add a splash of intrigue 
-                    as you float down the streets on incredibly soft VaporMax cushioning.</p>
-                </div>
+            <p id = "price">$210.00</p>     
+            <p id = "description">Made from at least 40% recycled materials by weight, 
+                the Nike Air VaporMax 2021 FK is airy and easy to wear with superstretchy, 
+                recycled Flyknit fabric (plus a soft collar that sculpts your ankle). 
+                The stitched-on Swoosh and recycled TPU heel clip add a splash of intrigue 
+                as you float down the streets on incredibly soft VaporMax cushioning.</p>
             </div>
         </div>
     </div>
+
+ 
 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
