--- a/Shoes/Zoom Freak 3.html
+++ b/Shoes/Zoom Freak 3.html
@@ -16,33 +16,32 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Zoom Freak 3</p>
 
-            <div class = "category">Category: Black</div>
-        </div>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/Zoom Freak 3.jpg"  >
+        </div> 
 
-        <div id="main">
+        <div class="main">
+            <div class="title" >
+                <p >Zoom Freak 3</p>
+                <div class = "category">Category: Black | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <div id = "rating-review">18900 reviews</div>
+                  </div>
+            </div>
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/Zoom Freak 3.jpg"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$210</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">Giannis is an athlete of freakish power and incredible range. His ability to play any position make him difficult to guard and nearly impossible to stop. 
-                    The Zoom Freak 3 helps Giannis create space with his massive strides and misdirecting Euro-step. The molded midfoot strap and external overlay provide side-to-side stability when he's powering to the rim, 
-                    while the multidirectional traction helps him stay in control.</p>
-                </div>
+            <p id = "price">$210.00</p>     
+            <p id = "description">Giannis is an athlete of freakish power and incredible range. His ability to play any position make him difficult to guard and nearly impossible to stop. The Zoom Freak 3 helps Giannis create space with his massive strides and misdirecting Euro-step. The molded midfoot strap and external overlay provide side-to-side stability when he's powering to the rim, while the multidirectional traction helps him stay in control.</p>
             </div>
         </div>
     </div>
+ 
 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
