--- a/Shoes/aj1midse.HTML
+++ b/Shoes/aj1midse.HTML
@@ -16,36 +16,37 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Air Jordan 1 Mid SE</p>
 
-            <div class = "category">Category: Red</div>
-        </div>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/aj1midse.jpg"  >
+        </div> 
 
-        <div id="main">
+        <div class="main">
+            <div class="title" >
+                <p>Air Jordan 1 Mid SE</p>
+                <div class = "category">Category: Red | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star  "></span>
+                    <div id = "rating-review">53712 reviews</div>
+                  </div>
+            </div>
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/aj1midse.jpg"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$135</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">These AJ1s serve a classic silhouette and vintage-inspired colors, making them a must-have for any sneakerhead. 
-                    Rich grain leather and woven fabrics will elevate any streetwear 'fit, while a buttery soft interior adds comfort.
-                    This new AJ 1 Mid is made of leather, suede and other materials spliced ​​together, and the advanced materials also give the shoes a good texture. 
-                    The royal blue toe cap and the Swoosh with the familiar Lakers elements are eye-catching and are the highlights of the shoe. 
-                    In addition, the red design on the collar is also quite eye-catching, echoing the tongue insole.</p>
-                </div>
+            <p id = "price">$135.00</p>     
+            <p id = "description">These AJ1s serve a classic silhouette and vintage-inspired colors, making them a must-have for any sneakerhead. 
+                Rich grain leather and woven fabrics will elevate any streetwear 'fit, while a buttery soft interior adds comfort.
+                This new AJ 1 Mid is made of leather, suede and other materials spliced ​​together, and the advanced materials also give the shoes a good texture. 
+                The royal blue toe cap and the Swoosh with the familiar Lakers elements are eye-catching and are the highlights of the shoe. 
+                In addition, the red design on the collar is also quite eye-catching, echoing the tongue insole.</p>
             </div>
         </div>
     </div>
 
+ 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
 
