--- a/Shoes/lebron18.html
+++ b/Shoes/lebron18.html
@@ -16,34 +16,33 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Lebron 18</p>
 
-            <div class = "category">Category: Other</div>
-        </div>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/lebron18.jpg"  >
+        </div> 
 
-        <div id="main">
+        <div class="main">
+            <div class="title" >
+                <p >Lebron 18</p>
+                <div class = "category">Category: Other | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <div id = "rating-review">12344 reviews</div>
+                  </div>
+            </div>
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/lebron18.jpg"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$160</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">It’s Tunes vs. Goons in the long-awaited basketball blockbuster, Space Jam: A New Legacy. 
-                    Nike Basketball celebrates the showdown with a fun take on the LeBron 18 Low. 
-                    The shoe is light yet strong, with responsive cushioning tuned for LeBron’s fast, powerful game—and perfect for taking on a squad of Goons in space. 
-                    Riffing on the classic Looney Tunes rivalry, ‘Bugs vs Marvin’ has the rascally rabbit squaring off against the diabolical Martian in an epic clash on the cosmic court.</p>
-                </div>
+            <p id = "price">$160.00</p>     
+            <p id = "description">It’s Tunes vs. Goons in the long-awaited basketball blockbuster, Space Jam: A New Legacy. Nike Basketball celebrates the showdown with a fun take on the LeBron 18 Low. The shoe is light yet strong, with responsive cushioning tuned for LeBron’s fast, powerful game—and perfect for taking on a squad of Goons in space. Riffing on the classic Looney Tunes rivalry, ‘Bugs vs Marvin’ has the rascally rabbit squaring off against the diabolical Martian in an epic clash on the cosmic court.</p>
             </div>
         </div>
-    </div>
+    </div> 
+
+     
 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
