--- a/Shoes/soldier 14.html
+++ b/Shoes/soldier 14.html
@@ -16,34 +16,33 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Soldier 14</p>
 
-            <div class = "category">Category: Black</div>
-        </div>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/soldier 14.jpg"  >
+        </div> 
 
-        <div id="main">
+        <div class="main">
+            <div class="title" >
+                <p >Soldier 14</p>
+                <div class = "category">Category: Black | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star "></span>
+                    <div id = "rating-review">23332 reviews</div>
+                  </div>
+            </div>
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/soldier 14.jpg"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$140</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">The Soldier Warrior series has always been one of James' favorite boots, especially during the playoffs. 
-                    This Soldier 14 also has a very good reputation in actual combat shoes. The comfort of the shoes is very high. 
-                    The front palm adopts a fan-shaped ZooM air cushion, and the back palm is a horseshoe-shaped ZooMAR air cushion, 
-                    which greatly increases the comfort. There are also professional cushioning materials, and the wear resistance is also good.</p>
-                </div>
+            <p id = "price">$140.00</p>     
+            <p id = "description">The Soldier Warrior series has always been one of James' favorite boots, especially during the playoffs. This Soldier 14 also has a very good reputation in actual combat shoes. The comfort of the shoes is very high. The front palm adopts a fan-shaped ZooM air cushion, and the back palm is a horseshoe-shaped ZooMAR air cushion, which greatly increases the comfort. There are also professional cushioning materials, and the wear resistance is also good.</p>
             </div>
         </div>
     </div>
+
+     
 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
