--- a/Shoes/LeBron 19.html
+++ b/Shoes/LeBron 19.html
@@ -16,36 +16,32 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >Lebron 19</p>
 
-            <div class = "category">Category: Other</div>
-        </div>
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/shoe4.webp"  >
+        </div> 
 
-        <div id="main">
+        <div class="main">
+            <div class="title" >
+                <p >Lebron 19</p>
+                <div class = "category">Category: Other | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star  "></span>
+                    <div id = "rating-review">63167 reviews</div>
+                  </div>
+            </div>
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/shoe4.webp"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$210</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
-
-                <p id = "description">LeBron thrives when stakes are high and the pressure’s on. 
-                    The LeBron 19 harnesses that energy with a locked-in fit and an updated cushioning system. 
-                    The snug inner sleeve is pulled together by a sculpted overlay that the laces feed through 
-                    to help prevent the foot from moving inside the shoe. Cushioned pods around the collar and 
-                    tongue add comfort while reducing weight, giving players the secure feel and confidence to 
-                    go all out when the game is on the line</p>
-                </div>
+            <p id = "price">$210.00</p>     
+            <p id = "description">LeBron thrives when stakes are high and the pressure’s on. The LeBron 19 harnesses that energy with a locked-in fit and an updated cushioning system. The snug inner sleeve is pulled together by a sculpted overlay that the laces feed through to help prevent the foot from moving inside the shoe. Cushioned pods around the collar and tongue add comfort while reducing weight, giving players the secure feel and confidence to go all out when the game is on the line.</p>
             </div>
         </div>
     </div>
+     
 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
