--- a/Shoes/kd 14.html
+++ b/Shoes/kd 14.html
@@ -16,34 +16,34 @@
 <body>
      
     <div id="nav-placeholder" ></div>
-    <div class = "detailPage">
-        <div class="col-3" style="text-align: center; padding-top: 10px;">
-            <p >KD 14</p>
 
-            <div class = "category">Category: Black</div>
-        </div>
 
-        <div id="main">
+    <div class = "productPage">
+        <div class="profile">
+            <img id = "productImage" src="../images/kd 14.jpg"  >
+        </div> 
 
-            <div class="row" style="text-align: center">
-                <div class="profile">
-                    <div class="profile">
-                        <img id = "productImage" src="../images/kd 14.jpg"  >
-                    </div>
-                </div>
-                <div class="row" style="text-align: center;  ">
-                    <p id = "price">$150</p>
-                </div>
-                <div class="row" style="text-align: center;  ">
+        <div class="main">
+            <div class="title" >
+                <p>KD 14</p>
+                <div class = "category">Category: Black | Brand: Nike</div>
+                <div id = "rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star  "></span>
+                    <div id = "rating-review">7234 reviews</div>
+                  </div>
+            </div>
 
-                <p id = "description">Nike kd14 will go on sale in April 2021. It is a practical sneaker designed for defenders and strikers. 
-                    The overall configuration uses full-length Zoom Strobel air cushion + arch TPU stabilizer + xdr rubber outsole, which can be clearly felt after you put your foot on it. 
-                    The midsole feedback has good resilience and a full sense of venue. When the breakthrough is started, the midsole feedback is sensitive. 
-                    The xdr outsole + deep multi-directional pattern design has good grip performance and good wear resistance.</p>
-                </div>
+            <p id = "price">$150.00</p>     
+            <p id = "description">Nike kd14 will go on sale in April 2021. It is a practical sneaker designed for defenders and strikers. The overall configuration uses full-length Zoom Strobel air cushion + arch TPU stabilizer + xdr rubber outsole, which can be clearly felt after you put your foot on it. The midsole feedback has good resilience and a full sense of venue. When the breakthrough is started, the midsole feedback is sensitive. The xdr outsole + deep multi-directional pattern design has good grip performance and good wear resistance.</p>
             </div>
         </div>
     </div>
+
+ 
 
 <fieldset id = "orderForm">
     <legend style = "text-align: center;">
