--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
      
     <div id="nav-placeholder"></div>
 
+    <div id = "names">
+      Group:&#160Ashley J. Chen,&#160 Yuxi Ge,&#160 Yilin Li 
+    </div>
 
     <div id = "categoryHeader">
       <h3>Choose Category</h3>
