--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="nav-placeholder"></div>
 
     <div id = "names">
-      Group:&#160Ashley J. Chen,&#160 Yuxi Ge,&#160 Yilin Li 
+      Group 12:&#160Ashley J. Chen,&#160 Yuxi Ge,&#160 Yilin Li 
     </div>
 
     <div id = "categoryHeader">
